--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         <img class="cld" src="./source/photo/tree.png" alt="">
 
         <div class="box1" >
-            <model-viewer  id="mod"  autoplay  shadow-intensity="1" interaction-prompt="none" src="./source/photo/watch.glb"alt="dragon" camera-controls disable-pan disable-tap disable-zoom min-camera-orbit='-90deg 75deg 0deg' max-camera-orbit= '90deg 75deg 0deg' ></model-viewer>
+            <model-viewer  id="mod"  autoplay  shadow-intensity="1" interaction-prompt="none" src="./watch.glb"alt="dragon" camera-controls disable-pan disable-tap disable-zoom min-camera-orbit='-90deg 75deg 0deg' max-camera-orbit= '90deg 75deg 0deg' ></model-viewer>
             <div  class="waviy">
                 <span style="--i:1">6</span>
                 <span style="--i:2">2</span>
